<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Course Table</string>

    <string name="add_button">Add Module</string>

    <string name="module_code">Module Code: </string>

    <string name="full_module_name">Full Module Name: </string>

    <string name="class_choice">Lecture/Practical: </string>

    <string name="day_of_week">Day of Week: </string>

    <string name="start_and_end__time">Start time and End time: </string>

    <string name="location">Location (room #): </string>

    <string name="addtional_info">Additional info (comments):</string>

    <string name="start_time">Start Time</string>

    <string name="end_time">End Time</string>

    <string name="lecture">Lecture</string>

    <string name="practical">Practical</string>

    <string name="first_letter"></string>

    <string name="preferences">Preferences</string>

    <string name="background">Background</string>

    <string name="white">White</string>

    <string name="black">Black</string>

    <string name="red">Red</string>

    <string name="font_color">Font Color</string>

    <string name="font_size">Font Size</string>

    <string name="font_famliy">Font Family</string>

    <string name="font">Font</string>

    <string name="bold">Bold</string>

    <string name="bold_italic">Bold-italic</string>

    <string name="italic">Italic</string>
    
    <drawable name="bgwhite">#e3f1d7</drawable>
    <drawable name="bgpink">#f1c8d1</drawable>
    <drawable name="bgblue">#bee9ea</drawable>
    <drawable name="fcblue">#0000ff</drawable>
    <drawable name="fcblack">#000000</drawable>
    <drawable name="fcred">#ff0000</drawable>
    <string name="notifications">"Notifications: "</string>
    <string name="no_notification">0 minute</string>
    <string name="notification_5">5 minutes</string>
    <string name="notification_10">10 minutes</string>
    <string name="notification_15">15 minutes</string>
    <string name="appwidget_text">Course Widget</string>
    <string name="course_widget_title">Today\'s Upcoming Class</string>

</resources>
