<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/background" />

        <RadioButton
            android:id="@+id/bd_white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/white"
            android:textColor="@drawable/bgwhite"
            android:textColorLink="@drawable/bgwhite"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/bd_black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Blue"
            android:textColor="@drawable/bgblue"
            android:textColorLink="@drawable/bgblue"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/bd_red"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Pink"
            android:textColor="@drawable/bgpink"
            android:textColorLink="@drawable/bgpink"
            android:textSize="14sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/font_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/font_color" />

        <RadioButton
            android:id="@+id/fc_white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Blue"
            android:textColor="@drawable/fcblue"
            android:textColorLink="@drawable/bgwhite"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/fc_black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/black"
            android:textColorLink="@drawable/fcblack"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/fc_red"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/red"
            android:textColor="@drawable/fcred"
            android:textColorHint="@drawable/fcred"
            android:textColorLink="@drawable/fcred"
            android:textSize="14sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/font_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/font_size" />

        <RadioButton
            android:id="@+id/low"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Small"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Medium"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/high"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Large"
            android:textSize="16sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/font" />

        <RadioButton
            android:id="@+id/bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bold"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/italic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/italic"
            android:textSize="14sp"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Normal"
            android:textSize="14sp"
            android:textStyle="normal" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/font_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Font Style" />

        <RadioButton
            android:id="@+id/default_font"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Default"
            android:textSize="14sp"
            android:textStyle="normal"
            android:typeface="normal" />

        <RadioButton
            android:id="@+id/sans"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Sans"
            android:textSize="14sp"
            android:textStyle="normal"
            android:typeface="sans" />

        <RadioButton
            android:id="@+id/serif"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Serif"
            android:textSize="14sp"
            android:textStyle="normal"
            android:typeface="serif" />

    </RadioGroup>

</LinearLayout>
